--- a/app/src/main/res/layout/activity_surveillence.xml
+++ b/app/src/main/res/layout/activity_surveillence.xml
@@ -4,13 +4,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="codeplay.thereissecurity.MainActivity">
+    tools:context="codeplay.thereissecurity.SurveillenceActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:id="@+id/captured_image"
+        android:layout_height="match_parent" />
 
     <Button
         android:layout_width="wrap_content"
-        android:text="START"
-        android:id="@+id/start_survey"
-        android:layout_centerInParent="true"
+        android:background="@android:color/transparent"
+        android:textColor="@android:color/black"
+        android:text="STOP"
+        android:id="@+id/stop_survey"
+        android:textStyle="bold"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
