--- a/app/src/main/res/layout/activity_surveillence.xml
+++ b/app/src/main/res/layout/activity_surveillence.xml
@@ -11,6 +11,11 @@
         android:id="@+id/captured_image"
         android:layout_height="match_parent" />
 
+    <SurfaceView
+        android:layout_width="match_parent"
+        android:id="@+id/camera_view"
+        android:layout_height="match_parent" />
+
     <Button
         android:layout_width="wrap_content"
         android:background="@android:color/transparent"
